--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
@@ -41,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
