--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.1",
     "tailwind": "^4.0.0",
     "toastr": "^2.1.4",
     "typescript": "^4.9.5",
