--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.17",
+    "@floating-ui/react": "^0.25.0",
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.0.8",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
