--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "chart.js": "^4.3.3",
     "dayjs": "^1.11.9",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.5.0",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
