--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "chart.js": "^4.3.3",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "flowbite": "^1.7.0",
     "flowbite-react": "^0.5.0",
@@ -34,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.1",
+    "styled-components": "^6.0.7",
     "tailwind": "^4.0.0",
     "toastr": "^2.1.4",
     "typescript": "^4.9.5",
