--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
-    "chart.js": "^4.3.3",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "graphql": "^16.7.1",
     "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
@@ -29,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.7.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
